changed get method, removed getFirst method